Add sout to debug